Add lambda layer repository in product search function

--- a/e-commerce/tsconfig.json
+++ b/e-commerce/tsconfig.json
@@ -23,12 +23,7 @@
     "typeRoots": [
       "./node_modules/@types"
     ],
-    "baseUrl": "./",
-    "paths": {
-      "/opt/nodejs/productsLayer":[
-        "lambda/products/layers/productLayer/nodejs/productRepository"
-      ]
-    }
+    "baseUrl": "./"
   },
   "exclude": [
     "node_modules",
